--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ html{
 #home::before{ 
     content: "";
     position: absolute;
-    background: url('../bg1.jpg') no-repeat center center/cover;
+    background: url('..images/bg1.jpg') no-repeat center center/cover;
     height: 642px;
     top:0px;
     left:0px;
